--- a/apiUfrpe/pom.xml
+++ b/apiUfrpe/pom.xml
@@ -68,8 +68,22 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
-		
+		<dependency>
+   <groupId>net.sourceforge.nekohtml</groupId>
+   <artifactId>nekohtml</artifactId>
+   <version>1.9.21</version>
+</dependency>
 
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>angularjs</artifactId>
+    <version>1.5.7</version>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.7.0</version>
+</dependency>
 	</dependencies>
 
 	<build>
