--- a/apiUfrpe/src/main/resources/application.properties
+++ b/apiUfrpe/src/main/resources/application.properties
@@ -2,5 +2,6 @@ server.post=${port:8080}
 spring.thymeleaf.cache = false
 spring.datasource.url= jdbc:mysql://localhost:3306/reports?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=A1b2c3d4e5.
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
+spring.thymeleaf.mode=LEGACYHTML5
